Installer loop through file list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "cSpell.language": "en",
     "cSpell.words": [
         "sysinfo"
+    ],
+    "cSpell.enableFiletypes": [
+        "!plaintext",
+        "!python"
     ]
 }
