--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.language": "en",
     "cSpell.words": [
+        "rsysinfo",
         "sysinfo"
     ],
     "cSpell.enableFiletypes": [
